update wilcoxon sec

--- a/Lab_ConnGraphTheory_Foundations3.ipynb
+++ b/Lab_ConnGraphTheory_Foundations3.ipynb
@@ -1049,24 +1049,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use a non-parametric test to determine if the metrics are significantly different \n",
+    "# Use a non-parametric test to determine if the distribution of a graph metric is significantly different \n",
     "# between the estimated thresholded network and the true network.\n",
     "\n",
-    "# Formally, we want to determine if (avg degree of true model - avg degree of estimated network) = 0\n",
+    "# Intuitively, we want to determine if (degree of true model - degree of estimated network) = 0\n",
+    "# Formally, we are asking if the difference is centered around zero.\n",
     "\n",
-    "# In this particular case, we would want them to NOT be different, \n",
-    "# indicating we recovered network properties of the true model.\n",
-    "# In other cases, for example, comparing two different group, we would like them to be different.\n",
+    "# In this particular case, we would want this difference to be centered around zero,\n",
+    "# suggesting we recovered network properties of the true model.\n",
+    "# In other cases, for example, comparing two different groups (experimental/control),\n",
+    "# we would expect the difference to NOT be centered around zero.\n",
     "\n",
     "# Let's make an example with the Degree\n",
     "# using the stats.wilcoxon function (more here https://en.wikipedia.org/wiki/Wilcoxon_signed-rank_test)\n",
+    "# For more info. about the Wilcoxon signed-rank test: \n",
+    "# https://www.sciencedirect.com/topics/mathematics/wilcoxon-signed-rank-test\n",
+    "\n",
     "print(f'test for the null hypothesis H0: (degree of true model - degree of estimated network) = 0')\n",
     "difference = true_model_degree - th_net_degree\n",
     "wilcoxon_test = stats.wilcoxon(difference, alternative='two-sided')\n",
     "print(wilcoxon_test)\n",
     "print('')\n",
     "print(f'The pval < 0.001 give us some credence to reject H0')\n",
-    "print(f'and conclude that the mean degree is different between networks')"
+    "print(f'and conclude that the degree distribution is different between the estimated and the true network')"
    ]
   },
   {
@@ -1075,11 +1080,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot the distribution of the difference (true_model_degree - th_net_degree)\n",
+    "# plot the distribution of the difference (true_model_degree - th_net_degree), for an intuitive visualization\n",
     "plt.figure(figsize=(5,5))\n",
     "plt.hist(difference,histtype='step')\n",
-    "plt.title('distribution of the degree difference')\n",
-    "plt.axvline(np.mean(difference),color='orange')\n",
+    "plt.title('distribution of the degree difference\\n and median of the distribution')\n",
+    "plt.axvline(np.median(difference),color='orange')\n",
     "plt.show()"
    ]
   },
