--- a/Lab_ConnGraphTheory_Foundations3.ipynb
+++ b/Lab_ConnGraphTheory_Foundations3.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Foundations 3: Lab on connectivity and graph theory\n",
     "- Instructor: Ruben Sanchez-Romero\n",
-    "- T.A: Jaleesa Longfellow\n",
-    "- Fall 2023 CMBN"
+    "- T.A: Lakshman Chakravarthula\n",
+    "- Spring 2025 CMBN, Rutgers Newark"
    ]
   },
   {
