--- a/Lab_ConnGraphTheory_Foundations3.ipynb
+++ b/Lab_ConnGraphTheory_Foundations3.ipynb
@@ -41,7 +41,7 @@
     "# https://sites.google.com/site/bctnet/ (Search bar in the top right)\n",
     "\n",
     "# if bctpy package not installed:\n",
-    "# in a terminal window from Jupyter type: pip --user install bctpy\n",
+    "# in a terminal window from Jupyter type: pip install --user bctpy\n",
     "# then Restart the kernel and run this cell again\n",
     "import bct as bct"
    ]
