--- a/HW_ConnGraphTheory_Foundations3.ipynb
+++ b/HW_ConnGraphTheory_Foundations3.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "# Foundations 3: Homework for lab on connectivity and graph theory\n",
-    "- Due November 22, 2023\n",
+    "- Due April 9, 2025\n",
     "- Instructor: Ruben Sanchez-Romero\n",
-    "- T.A: Jaleesa Longfellow\n",
-    "- Fall 2023 CMBN"
+    "- T.A: Lakshman Chakravarthula\n",
+    "- Spring 2025, CMBN, Rutgers Newark"
    ]
   },
   {
@@ -157,9 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -247,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -261,9 +259,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
