--- a/Lab_ConnGraphTheory_Foundations3.ipynb
+++ b/Lab_ConnGraphTheory_Foundations3.ipynb
@@ -488,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The characteristic path length is the average shortest shortest path length in the network\n",
+    "# The characteristic path length is the average shortest path length in the network\n",
     "# As you can see, we computed it above as the mean of the upper triangular of the distance matrix\n",
     "\n",
     "# We can use bct.charpath to compute it. It takes as input a distance matrix (as the one computed above)\n",
